--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="jquery-1.11.1.js"></script>
-    <script src="raphael.js"></script>
+    <script src="jquery-1.11.1.min.js"></script>
+    <script src="raphael-min.js"></script>
     <script src="application.js"></script>
     <title></title>
     <style>
