Initial impl for snap points

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <div>
     <ul id="controls">
-        <li><input type="button" value="line" class="line active"/></li>
+        <li><input type="button" value="segment" class="segment active"/></li>
         <li><input type="button" value="circle" class="circle"/></li>
         <li><input type="button" value="point" class="point"/></li>
     </ul>
