Impl circle equality, new tests, fixes

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title></title>
     <style>
         #target {
-            width: 100%;
-            height: 800px;
-            background: #ccc;
+            width: 700px;
+            height: 500px;
+            border: 1px solid #ccc;
         }
         #controls .active {
             font-weight: bold;
