--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 </head>
 <body>
 
+<p>Construct a line (segment) that goes through point A and that is perpendicular to the given line segment.</p>
+
 <div>
     <ul id="controls">
         <li><input type="button" value="segment" class="segment active"/></li>
