Implemented circle center snap point

--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
 
 <fieldset id="snapping">
     <legend>Snapping</legend>
-    <label><input type="radio" name="snapping" value="none" checked/> None</label>
+    <label><input type="radio" name="snapping" value="all" checked/> All</label>
     <label><input type="radio" name="snapping" value="endpoint"/> Endpoints</label>
     <label><input type="radio" name="snapping" value="intersection"/> Intersections</label>
-    <label><input type="radio" name="snapping" value="all"/> All</label>
+    <label><input type="radio" name="snapping" value="center"/> Intersections</label>
+    <label><input type="radio" name="snapping" value="none"/> None</label>
 </fieldset>
 
 <div id="target"></div>
