Refactoring. Fixed center snap pt

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <label><input type="radio" name="snapping" value="all" checked/> All</label>
     <label><input type="radio" name="snapping" value="endpoint"/> Endpoints</label>
     <label><input type="radio" name="snapping" value="intersection"/> Intersections</label>
-    <label><input type="radio" name="snapping" value="center"/> Intersections</label>
+    <label><input type="radio" name="snapping" value="center"/> Center</label>
     <label><input type="radio" name="snapping" value="none"/> None</label>
 </fieldset>
 
