--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
     <label><input type="radio" name="tool" value="circle"/> Circle</label>
     <label><input type="radio" name="tool" value="point"/> Point</label>
 </fieldset>
+<fieldset id="edit">
+    <legend>Edit</legend>
+    <label><input type="radio" name="tool" value="move" /> Move</label>
+</fieldset>
 
 <fieldset id="snapping">
     <legend>Snapping</legend>
